[BlinkGenPropertyTrees] Update viewport only with flag

It seems this code may be responsible for performance regression in the
linked bug. This CL makes the code conditional on the blink gen property
trees flag (it's unneeded without the flag) to make sure its really the
cause of the regression. We can investigate performance improvements if
it's confirmed.

Bug: 868927
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I5a868f1f57429fe82cd01446b24d8466cc009e38
Reviewed-on: https://chromium-review.googlesource.com/1161205
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581237}
Former-commit-id: 9e3f17630b4de8507b9edc3414784bc869f987b0